--- a/client/src/components/css/input.css
+++ b/client/src/components/css/input.css
@@ -1,7 +1,7 @@
 .icon-input-spacer {
   position: relative;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-content: flex-end;
 }
 
