--- a/client/src/views/css/registration.css
+++ b/client/src/views/css/registration.css
@@ -1,19 +1,3 @@
-.flex-wrapper {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.container__wrapper {
-  width: 100%;
-}
-
-.content-flex {
-  display: flex;
-}
-
 .content-flex > div {
   flex-grow: 1;
   width: 100%;
@@ -47,17 +31,19 @@
 }
 
 .registration-form__bottom-text {
-	margin-top: 1em;
+  margin-top: 1em;
 }
 
 .registration-form__bottom-text > a {
-	color: black;
+  color: black;
+}
+
+.submit-error {
+  margin-bottom: 1em;
+  color: red;
 }
 
 @media screen and (max-width: 700px) {
-  .content-flex {
-    flex-direction: column;
-  }
   .image-container {
     margin: 0;
     padding: 1em 5em 1em 5em;
